# myUniquePtr

./: CMakeLists.txt  SimpleClass.cpp  SimpleClass.hpp  main.cpp  unique_ptr.hpp  ut.cpp
